deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  namespace: samtel
  labels:
    app: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: francotorres01/test-samtel:latest
        ports:
        - containerPort: 8000
        command: ["python3"]
        args: ["-m", "flask", "run", "--host=0.0.0.0", "--port=8000"]
        lifecycle:
          preStop:
            exec:
              command: ["sh", "-c", "kill -SIGINT 1"]
