service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: samtel
  annotations:
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
